--- a/portfolio/src/components/Hero/hero.css
+++ b/portfolio/src/components/Hero/hero.css
@@ -1,7 +1,67 @@
 .hero img {
     border-radius: 50%;
-    width: 200px;
-    height: 200px;
+    width: 300px;
+    height: 300px;
     border: 1px solid #db10db;
+    margin-top: 50px;
   
   }
+
+.hero{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px; ;
+}
+
+.hero h1{
+  text-align: center;
+  width: 70%;
+  font-size: 70px;
+  font-weight: 600;
+}
+.hero h1 span{
+  background: linear-gradient(45deg, #1E90FF, #FF1493); 
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.hero p{
+  width: 50%;
+  text-align: center;
+  font-size: 24px;
+  line-height: 40px;
+}
+
+.hero-action{
+  display: flex;
+  align-items: center;
+  gap: 25px;
+  font-size: 24px;
+  font-weight: 500;
+  margin-bottom: 50px;
+}
+
+.hero-connect{
+  padding: 24px 45px;
+  border-radius: 50px;
+  color: white;
+  background: linear-gradient(45deg, #1E90FF, #FF1493); 
+  cursor: pointer;
+}
+
+.hero-resume{
+  padding: 24px 45px;
+  border-radius: 50px;
+  border: 1px solid white;
+  cursor: pointer;
+
+}
+
+.hero-connect:hover{
+  border: 1px solid white;
+}
+.hero-resume:hover{
+  border-color:  #FF1493; 
+}
