--- a/portfolio/src/components/Navbar/navbar.css
+++ b/portfolio/src/components/Navbar/navbar.css
@@ -11,13 +11,13 @@
     align-items: center;
     list-style: none;
     gap: 60px;
-    font-size: 15px;
+    font-size: 20px;
 }
 
 .nav-connect{
     padding: 12px;
     border-radius: 50px;
-    color: black;
+    color: white;
     background: linear-gradient(45deg, #1E90FF, #FF1493);
     font-size: 20px;
     cursor: pointer;
