--- a/portfolio/src/components/Contact/contact.css
+++ b/portfolio/src/components/Contact/contact.css
@@ -85,6 +85,7 @@
   color: #d3d3d3;
   font-family: Outfit;
   font-size: 20px;
+  resize: none;
 }
 .contact-submit{
     border: none;
@@ -100,4 +101,81 @@
 .contact-submit:hover{
     transform: scale(1.05);
     transition: 0.3s;
+}
+
+.contact-opts{
+  display: flex;
+  align-items: center;
+  gap: 25px;
+  font-size: 24px;
+  font-weight: 500;
+  margin-bottom: 50px;
+}
+.contact-reset {
+  padding: 16px 45px;
+  border-radius: 50px;
+  border: 1px solid white;
+  color: white;
+  background-color: transparent;
+  font-size: 20px;
+  font-weight: 500;
+  width: 200px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  margin-bottom: 50px;
+}
+.contact-reset:hover {
+  border-color: #FF1493;
+  color: #FF1493; 
+}
+@media (max-width: 1230px) {
+  .contact{
+    gap: 50px;
+    margin: 50px 70px;
+    align-items: start;
+
+  }
+  .contact-title h1{
+    padding: 0;
+    font-size: 50px;
+    font-weight: 600;
+  }
+  .contact-title img{
+    width:130px;
+    margin-right: -20px;
+  }
+  .contact-section{
+    flex-direction: column;
+  }
+  .contact-left h1{
+    font-size: 54px;
+  }
+  .contact-left p{
+    font-size: 18px;
+  }
+  .contact-detail{
+    gap: 20px;
+  }
+  .contact-detail img{
+    width: 25px;
+  }
+  .contact-right label{
+    font-size: 20px;
+  }
+  .contact-right input{
+    width: 100%;
+    font-size: 20px;
+  }
+  .contact-right textarea{
+    width: 95%;
+    font-size: 20px;
+  }
+  .contact-submit{
+    font-size: 20px;
+    padding: 15px 40px;
+  }
+  .contact-reset{
+    font-size: 20px;
+    padding: 15px 40px;
+  }
 }
