--- a/portfolio/src/components/Navbar/navbar.css
+++ b/portfolio/src/components/Navbar/navbar.css
@@ -1,20 +1,19 @@
-.navbar{
+.navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 20px 100px;
-   
 }
 
-.nav-menu{
+.nav-menu {
     display: flex;
     align-items: center;
     list-style: none;
-    gap: 100px;
+    gap: 50px; /* Reduced gap for better spacing */
     font-size: 20px;
 }
 
-.nav-connect{
+.nav-connect {
     padding: 12px;
     border-radius: 50px;
     color: white;
@@ -22,50 +21,56 @@
     font-size: 20px;
     cursor: pointer;
     transition: 0.5s;
+    margin-left: 20px; /* Added margin for better spacing */
 }
-.nav-connect:hover{
+
+.nav-connect:hover {
     transform: scale(1.05);
 }
-.nav-menu li{
+
+.nav-menu li {
     display: flex;
     flex-direction: column;
     gap: 5px;
     cursor: pointer;
+    align-items: center; /* Ensures icons align properly */
 }
-.nav-menu li img{
-    display: flex;
-    margin: auto;
+
+.nav-menu li img {
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0; /* Adjusted for proper alignment */
 }
-.anchor-link{
+
+.anchor-link {
     text-decoration: none;
     color: white;
 }
-.nav-mob-close{
+
+.nav-mob-close, .nav-mob-open {
     display: none;
 }
-.nav-mob-open{
-    display: none;
-}
-@media (max-width: 1230px) {
+
+@media (max-width: 763px) {
     .navbar {
-        margin: 20px 50px; 
+        margin: 20px 50px;
     }
-    .nav-connect{
+    .nav-connect {
         display: none;
     }
-    .nav-mob-open{
+    .nav-mob-open {
         display: block;
         position: fixed;
         right: 30px;
     }
-    .nav-mob-close{
+    .nav-mob-close {
         display: block;
         position: relative;
-        top:30px;
+        top: 30px;
         left: 290px;
         width: 30px;
     }
-    .nav-menu{
+    .nav-menu {
         position: fixed;
         flex-direction: column;
         align-items: start;
@@ -78,11 +83,10 @@
         transition: right 0.5s;
         right: -350px;
     }
-    .nav-menu li{
+    .nav-menu li {
         font-size: 30px;
         padding-left: 100px;
         flex-direction: row;
-        gap:20px;
-
+        gap: 20px;
     }
 }
