--- a/portfolio/src/components/About/about.css
+++ b/portfolio/src/components/About/about.css
@@ -62,41 +62,48 @@
   transition: 0.3s;
 }
 
-@media ( max-width: 763px) {
-  .about{
-    gap:80px;
-    margin: 50px 70px;
-    align-items: start;
+@media (max-width: 1024px) {
+  .about {
+    margin: 50px 30px;
+    gap: 60px;
   }
-  .about-title h1{
-    font-size: 50px;
-    padding:0;
 
-  }
-  .about-title img{
-    width: 130px;
-    right:-20px;
-  }
-  .about-section{
+  .about-section {
     flex-direction: column;
+    gap: 40px;
   }
-  .about-left{
+
+  .about-left {
     display: none;
   }
-  .about-right{
-    font-size: 18px;
-    line-height: 32px;
 
+  .about-title h1 {
+    font-size: 50px;
+    padding: 0;
+  }
 
+  .about-title img {
+    width: 120px;
+    right: -10px;
   }
-  .about-skills{
-    justify-content: space-between;
-  }
-  .skill{
-    gap: 10px;
-  }
-  .skill p{
-    text-align: center;
+
+  .about-right {
     font-size: 16px;
+    line-height: 1.8;
+  }
+
+  .about-skills {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .skill {
+    gap: 10px;
+    font-size: 16px;
+  }
+
+  .skill p {
+    font-size: 14px;
+    text-align: center;
   }
 }
