--- a/portfolio/src/components/Projects/project.css
+++ b/portfolio/src/components/Projects/project.css
@@ -131,6 +131,17 @@
     background: #333;
   }
   
+  .project-link {
+    display: inline-block;
+    margin-top: 1rem;
+    color: #0366d6;
+    font-weight: 500;
+    text-decoration: none;
+  }
+  
+  .project-link:hover {
+    text-decoration: underline;
+  }
   
   
   @media (max-width: 1024px) {
